<resources>
    <string name="app_name">Whats for dinner?</string>
    <string name="btnBack">Back</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnOk">Ok</string>
    <string name="btnAdd">Add</string>
    <string name="btnDelete">Delete</string>
    <string name="edtSearch">Search here</string>
    <string name="txtTime">Preparation time: </string>
    <string name="txtIngrediens">Ingrediens: </string>
    <string name="txtDescription">Description: </string>
    <string name="imgRecipe">Recipe</string>
    <string name="btnMap">Map</string>
    <string name="btnRandom">Random</string>
    <string name="btnSignin">Sign in</string>
    <string name="btnLogout">Logout</string>
    <string name="txtUsername">Username</string>
    <string name="txtInstruction">Instuctions: </string>
    <string name="txtHeader">Whats for dinner?</string>
    <string name="txtWelcome">Welcome!</string>
    <string name="imgAvatar">Avatar</string>
    <string name="txtRecipe">Recipe</string>
    <string name="txtRecipe1">Todays dinner could not be shown.</string>
    <string name="txtRecipe2">There is currently no recipes on this account.</string>
    <string name="txtNotloggedin">You have to sign in before you can use the app.</string>
</resources>