<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRecipe"
                android:layout_width="258dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/imgRecipe"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtRecipe"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txtRecipe"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIngrediens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtIngrediens" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="345dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:text="@string/txtDescription" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btnBack" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/txtTime" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/btnDelete" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>